--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@
 # should be updated accordingly.
 
 # Drizzle
-DATABASE_URL="postgresql://postgres:password@localhost:5432/t2"
+POSTGRES_URL="postgresql://postgres:password@localhost:5432/t2"
 
 # Example:
 # SERVERVAR="foo"
